--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WiseWallet</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="estilos.css">
 </head>
 
@@ -14,8 +15,8 @@
     <div class="header">
         <a href="index.html" class="logo">WiseWallet</a>
         <div class="header-right">
-            <a href="index.html">Home</a> <!-- A la pagina que esté activa le añado class = "active" -->
-            <a href="#contact">Contact</a>
+            <a href="index.html">Sobre nosotros</a> <!-- A la pagina que esté activa le añado class = "active" -->
+            <a href="#contact">Foro</a>
             <a href="iniciarsesion.html">Iniciar Sesión</a>
         </div>
     </div>
