--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -16,16 +16,28 @@
         <a href="index.html" class="logo">WiseWallet</a>
         <div class="header-right">
             <a href="index.html">Home</a> <!-- A la pagina que esté activa le añado class = "active" -->
-            <a href="#contact">Contact</a>
-            <a class = "active" href="iniciarsesion.html">Iniciar Sesión</a>
+            <a href="#contact">Sobre nosotros</a>
+            <a class="active" href="iniciarsesion.html">Iniciar Sesión</a>
         </div>
     </div>
     <!--    FIN CABECERA    -->
 
     <!--    CONTENIDO PRINCIPAL   -->
+    <div class="login">
+        <h1 class="tituloinicia">Inicia sesión</h1>
+        <h5 class="textoinicia">¿No tienes cuenta? <a href="registrarse.html">Regístrate</a></h5>
+    <form>
+        <div class="cuadrostexto">
+            <input type="text" name="Correo" placeholder="Correo electrónico" required>
+            <input type="text" name="Contraseña" placeholder="Contraseña" required>
+        </div>
 
-
-    
+        <input class="cuadrotic" type="checkbox" checked="checked" name="remember"> Recuérdame
+        <p></p>
+        <p></p> <!-- espacio vacio pq no me deja poner margen   -->
+        <p></p>
+        <input type="submit" value="Iniciar sesión" class="botonregistro" href="index.html"></input>
+    </form>
     <!--    FIN CONTENIDO PRINCIPAL     -->
 
 
