--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -13,6 +13,7 @@
 
     <!--    CABECERA    -->
     <div class="header">
+        <div class="menu"></div>
         <a href="index.html" class="logo">WiseWallet</a>
         <div class="header-right">
             <a href="index.html">Home</a> <!-- A la pagina que esté activa le añado class = "active" -->
@@ -25,7 +26,7 @@
     <!--    CONTENIDO PRINCIPAL   -->
     <div class="login">
         <h1 class="tituloinicia">Inicia sesión</h1>
-        <h5 class="textoinicia">¿No tienes cuenta? <a href="registrarse.html">Regístrate</a></h5>
+        <h5>¿No tienes cuenta? <a href="registrarse.html" class="texto-registra">Regístrate</a></h5>
     <form>
         <div class="cuadrostexto">
             <input type="text" name="Correo" placeholder="Correo electrónico" required>
