--- a/registrarse.html
+++ b/registrarse.html
@@ -10,7 +10,14 @@
 
 <body>
 
-
+    <!--    CABECERA    -->
+    <div class="header-register">
+        <a href="registrarse.html" class="logo">WiseWallet</a>
+        <div class="header-right">
+            <a href="iniciarsesion.html">Iniciar Sesión</a>
+        </div>
+    </div>
+    <!--    FIN CABECERA    -->
     <!--    MITAD IZQUIERDA -->
     <div class="mitad-izquierda">
         <p class="TituloPagRegistro">Pon tu energía creativa a trabajar con WiseWallet</p>
@@ -25,7 +32,7 @@
     <!--    MITAD DERECHA   -->
     <div class="mitad-derecha">
         <h1 class="registrate">Regístrate</h1>
-        <h5 class="textoinicia">o <a href="iniciarsesion.html">inicia sesión en tu cuenta</a></h5>
+        <h5>o <a href="iniciarsesion.html" class="texto-inicia">inicia sesión en tu cuenta</a></h5>
         <form>
             <div class="cuadrostexto">
                 <input type="text" name="Nombre" placeholder="Nombre" required>
@@ -34,25 +41,11 @@
                 <input type="text" name="Contraseña" placeholder="Contraseña" required>
             </div>
 
-            <input class="cuadrotic" type="checkbox" checked="checked" name="remember"> Recuérdame
-            <p></p>
-            <p></p> <!-- espacio vacio pq no me deja poner margen   -->
-            <p></p>
+            <input class="cuadrotic" type="checkbox" checked="checked" name="remember">Recuérdame
             <input type="submit" value="Registrarse" class="botonregistro" href="index.html"></input>
         </form>
     </div>
     <!--    FIN MITAD DERECHA   -->
-
-    <!--    CABECERA    -->
-    <div class="header-register">
-        <a href="registrarse.html" class="logo">WiseWallet</a>
-        <div class="header-right">
-            <a href="iniciarsesion.html">Iniciar Sesión</a>
-        </div>
-    </div>
-    <!--    FIN CABECERA    -->
-
-
 </body>
 
 </html>
