--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -27,7 +27,7 @@
     <div class="login">
         <h1 class="tituloinicia">Inicia sesión</h1>
         <h5>¿No tienes cuenta? <a href="registrarse.html" class="texto-registra">Regístrate</a></h5>
-    <form>
+    <form action="index.html" method="post">
         <div class="cuadrostexto">
             <input type="text" name="Correo" placeholder="Correo electrónico" required>
             <input type="text" name="Contraseña" placeholder="Contraseña" required>
