--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -39,6 +39,7 @@
         <p></p>
         <input type="submit" value="Iniciar sesión" class="botonregistro" href="index.html"></input>
     </form>
+    </div>
     <!--    FIN CONTENIDO PRINCIPAL     -->
 
 
