--- a/registrarse.html
+++ b/registrarse.html
@@ -18,6 +18,7 @@
         </div>
     </div>
     <!--    FIN CABECERA    -->
+
     <!--    MITAD IZQUIERDA -->
     <div class="mitad-izquierda">
         <p class="TituloPagRegistro">Pon tu energía creativa a trabajar con WiseWallet</p>
@@ -33,19 +34,21 @@
     <div class="mitad-derecha">
         <h1 class="registrate">Regístrate</h1>
         <h5 class="registrate">o <a href="iniciarsesion.html" class="texto-inicia">inicia sesión en tu cuenta</a></h5>
-        <form action = "index.html" method="post">
-            <div class="cuadrostexto">
+
+        <form action="index.html" method="post">
+            <div class="cuadrostexto"> <!--    Cuadros de texto    -->
                 <input type="text" name="Nombre" placeholder="Nombre" required>
                 <input type="text" name="Apellidos" placeholder="Apellidos" required>
                 <input type="text" name="Correo" placeholder="Correo electrónico" required>
                 <input type="text" name="Contraseña" placeholder="Contraseña" required>
             </div>
 
-            <div class="custom-checkbox">
+            <div class="custom-checkbox"> <!--    Checkbox    -->
                 <input type="checkbox" id="miCheckbox">
-                <label for="miCheckbox" class="Recuerdame">Recuérdame</label>                
+                <label for="miCheckbox">Recuérdame</label>
             </div>
-            <input type="submit" value="Registrarse" class="botonregistro"></input>
+
+            <input type="submit" value="Registrarse" class="botonregistro"></input> <!-- Botón de Registrarse   -->
         </form>
     </div>
     <!--    FIN MITAD DERECHA   -->
