--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -13,7 +13,7 @@
 
     <!--    CABECERA    -->
     <div class="header">
-        <a href="index.html" class="logo">WiseWallet</a>
+        <a href="index.html" class="logo_iniciar">WiseWallet</a>
         <div class="header-right">
             <!-- A la pagina que esté activa le añado class = "active" -->
             <a href="#contact">Sobre nosotros</a>
@@ -34,10 +34,10 @@
                     <input type="text" name="Contraseña" placeholder="Contraseña" required>
                 </div>
 
-                <div class="custom-checkbox">
-                    <input type="checkbox" id="miCheckbox">
-                    <label for="miCheckbox" class="Recuerdame">Recuérdame</label>
-                </div>
+                <label class="custom-checkbox">Recuérdame
+                    <input type="checkbox">
+                    <span class="checkmark"></span>
+                </label>
                 <input type="submit" value="Iniciar sesión" class="botonregistro"></input>
             </form>
         </div>
