--- a/registrarse.html
+++ b/registrarse.html
@@ -43,10 +43,10 @@
                 <input type="text" name="Contraseña" placeholder="Contraseña" required>
             </div>
 
-            <div class="custom-checkbox"> <!--    Checkbox    -->
-                <input type="checkbox" id="miCheckbox">
-                <label for="miCheckbox">Recuérdame</label>
-            </div>
+            <label class="custom-checkbox">Recuérdame
+                <input type="checkbox">
+                <span class="checkmark"></span>
+            </label>
 
             <input type="submit" value="Registrarse" class="botonregistro"></input> <!-- Botón de Registrarse   -->
         </form>
