--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WiseWallet</title>
-    <link rel="icon" type="image/png" href="logo.png"> <!--    Icono de la pestaña     -->
-    <link rel="stylesheet" href="estilos.css"> <!--   Enlace con el archivo css     -->
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="stylesheet" href="estilos.css">
+
+    <!--link para el icono del submenu-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Icono de la flecha hacia abajo en el menu desplegable -->
 </head>
 
 <body>
@@ -17,39 +18,26 @@
     <div class="header">
 
         <div id="mysidenav" class="sidenav">
-            <!--    Dropdown    -->
-            <button class="dropdown-btn">Gastos
+            <a href="#">About</a>
+            <button class="boton-submenu">Services 
                 <i class="fa fa-caret-down"></i>
             </button>
-            <div class="dropdown-container">
-                <a href="#">Subir</a>
-                <a href="#">Buscar</a>
-                <a href="#">Filtrar</a>
-                <a href="#">Visualizar</a>
-                <a href="#">Grupales</a>
-                <a href="#">Historial</a>
-                <a href="#">Exportar</a>
+            <div class="Submenu">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
             </div>
-            <!--    Enlaces     -->
-            <a href="#">Objetivos</a>
-            <a href="#">Progreso</a>
-            <a href="#">Multimedia</a>
-            <a href="#">Mercado de valores</a>
-            <a href="#">Noticias</a>
-            <!--    Dropdown    -->
-            <button class="dropdown-btn">Mi cuenta
+            <button class="boton-submenu">Dropdown 
                 <i class="fa fa-caret-down"></i>
             </button>
-            <div class="dropdown-container">
-                <a href="#">Cuentas y tarjeta</a>
-                <a href="#">Foto</a>
-                <a href="#">Fecha</a>
-                <a href="#">Suscripciones</a>
-                <a href="#">Otros datos</a>
+            <div class="Submenu">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
             </div>
-
+            <a href="#">Contact</a>
         </div>
-
+        
         <div class="iconomenu" onclick="myFunction(this), toggleNav()">
             <div class="bar1"></div>
             <div class="bar2"></div>
@@ -146,33 +134,46 @@
             x.classList.toggle("change");
         }
 
+        //Script para los submenus del sidenav
+        var dropdown = document.getElementsByClassName("boton-submenu");
+        var i;
+
+        for (i = 0; i < dropdown.length; i++) {
+        
+            dropdown[i].addEventListener("click", function() {
+                this.classList.toggle("submenu-activo");
+                var dropdownContent = this.nextElementSibling;
+                if (dropdownContent.style.display === "block") {
+
+                    dropdownContent.style.display = "none";
+                } else {
+
+                    dropdownContent.style.display = "block";
+                }
+            });
+        }
+
         function toggleNav() {  // Hace que el icono del menu pueda abrir y cerrar el sidenav
             const sidenav = document.getElementById("mysidenav");
             const container = document.querySelector(".iconomenu");
 
+            //Todos los submenus posibles
+            const dropdownContentServices = document.querySelector(".sidenav .boton-submenu:nth-of-type(1) + .Submenu");
+            const dropdownContentDropdown = document.querySelector(".sidenav .boton-submenu:nth-of-type(2) + .Submenu");
+            const Submenuactivo = document.querySelector(".submenu-activo");
+
             if (sidenav.style.width === "200px") {
                 sidenav.style.width = "0";
                 container.classList.remove("change");
+                //cierra los submenus activos
+                dropdownContentServices.style.display = "none";
+                dropdownContentDropdown.style.display = "none";
+                Submenuactivo.classList.remove("submenu-activo")
+
             } else {
                 sidenav.style.width = "200px";
                 container.classList.add("change");
             }
-        }
-
-        //DROPDOWN
-        var dropdown = document.getElementsByClassName("dropdown-btn");
-        var i;
-
-        for (i = 0; i < dropdown.length; i++) {
-            dropdown[i].addEventListener("click", function () {
-                this.classList.toggle("opcionactiva");
-                var dropdownContent = this.nextElementSibling;
-                if (dropdownContent.style.display === "block") {
-                    dropdownContent.style.display = "none";
-                } else {
-                    dropdownContent.style.display = "block";
-                }
-            });
         }
     </script>
     <!--    FIN SCRIPTS     -->
