--- a/registrarse.html
+++ b/registrarse.html
@@ -14,7 +14,8 @@
     <div class="header-register">
         <a href="registrarse.html" class="logo">WiseWallet</a>
         <div class="header-right">
-            <a href="iniciarsesion.html">Iniciar Sesión</a>
+            <a href="#">Sobre nosotros</a>
+            <a href="iniciarsesion.html">Iniciar Sesión</a>            
         </div>
     </div>
     <!--    FIN CABECERA    -->
