--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -17,7 +17,6 @@
         <div class="header-right">
             <!-- A la pagina que esté activa le añado class = "active" -->
             <a href="#contact">Sobre nosotros</a>
-            <a class="active" href="iniciarsesion.html">Iniciar Sesión</a>
         </div>
     </div>
     <!--    FIN CABECERA    -->
@@ -30,8 +29,8 @@
 
             <form action="index.html" method="post">
                 <div class="cuadrostexto">
-                    <input type="text" name="Correo" placeholder="Correo electrónico" required>
-                    <input type="text" name="Contraseña" placeholder="Contraseña" required>
+                    <input type="email" name="Correo" placeholder="Correo electrónico" required>
+                    <input type="password" name="Contraseña" placeholder="Contraseña" required>
                 </div>
 
                 <label class="custom-checkbox">Recuérdame
