--- a/registrarse.html
+++ b/registrarse.html
@@ -22,7 +22,7 @@
 
     <!--    MITAD IZQUIERDA -->
     <div class="mitad-izquierda">
-        <p class="TituloPagRegistro">Pon tu energía creativa a trabajar con WiseWallet</p>
+        <p class="TituloPagRegistro">WiseWallet, tu aliado para seguir el rastro a tus gastos</p>
         <p class="textopagregistro">WiseWallet es un espacio de trabajo moderno diseñado
             para aliviar el trabajo pesado, de modo que puedas hacer hincapié en lo que
             realmente importa.
@@ -40,8 +40,8 @@
             <div class="cuadrostexto"> <!--    Cuadros de texto    -->
                 <input type="text" name="Nombre" placeholder="Nombre" required>
                 <input type="text" name="Apellidos" placeholder="Apellidos" required>
-                <input type="text" name="Correo" placeholder="Correo electrónico" required>
-                <input type="text" name="Contraseña" placeholder="Contraseña" required>
+                <input type="email" name="Correo" placeholder="Correo electrónico" required>
+                <input type="password" name="Contraseña" placeholder="Contraseña" required>
             </div>
 
             <label class="custom-checkbox">Recuérdame
