--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WiseWallet</title>
     <link rel="icon" type="image/png" href="logo.png">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="iniciarsesion.css">
+    <link rel="stylesheet" href="headerfooter.css">
 </head>
 
 <body>
     <!--Asi se comenta en el html-->
 
     <!--    CABECERA    -->
-    <div class="header">
-        <a href="index.html" class="logo_iniciar">WiseWallet</a>
-        <div class="header-right">
-            <!-- A la pagina que esté activa le añado class = "active" -->
-            <a href="#contact">Sobre nosotros</a>
+    <div class="login">
+        <div class="header">
+            <a href="index.html" class="logo_iniciar">WiseWallet</a>
+            <div class="header-right">
+                <!-- A la pagina que esté activa le añado class = "active" -->
+                <a href="#contact">Sobre nosotros</a>
+            </div>
         </div>
     </div>
     <!--    FIN CABECERA    -->
