--- a/registrarse.html
+++ b/registrarse.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WiseWallet</title>
     <link rel="icon" type="image/png" href="logo.png">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="headerfooter.css">
+    <link rel="stylesheet" href="registrarse.css">
 </head>
 
 <body>
