--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="logo.png"> <!--    Icono de la pestaña     -->
     <link rel="stylesheet" href="headerfooter.css"> <!--   Enlace con el archivo css     -->
     <link rel="stylesheet" href="index.css">
-    <!-- Icono de la flecha hacia abajo en el menu desplegable -->
+    <!-- Icono de la flecha hacia abajo e icono usuario -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -62,7 +62,8 @@
         </div>
 
         <div class="header-right">
-            <a href="#about">Sobre nosotros</a> <!-- A la pagina que esté activa le añado class = "active" -->
+            <a href="sobrenosotros.html">Sobre nosotros</a> <!-- A la pagina que esté activa le añado class = "active" -->
+            <a href="#"><i class="fa fa-fw fa-user"></i>  Perfil</a>
         </div>
     </div>
     <!--    FIN CABECERA    -->
