--- a/registrarse.html
+++ b/registrarse.html
@@ -13,9 +13,9 @@
 
     <!--    CABECERA    -->
     <div class="header-register">
-        <a href="registrarse.html" class="logo">WiseWallet</a>
+        <a href="index.html" class="logo">WiseWallet</a>
         <div class="header-right">
-            <a href="#">Sobre nosotros</a>
+            <a href="sobrenosotros.html">Sobre nosotros</a>
             <a href="iniciarsesion.html">Iniciar Sesión</a>            
         </div>
     </div>
