--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -18,7 +18,7 @@
             <a href="index.html" class="logo_iniciar">WiseWallet</a>
             <div class="header-right">
                 <!-- A la pagina que esté activa le añado class = "active" -->
-                <a href="#contact">Sobre nosotros</a>
+                <a href="sobrenosotros.html">Sobre nosotros</a>
             </div>
         </div>
     </div>
