--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -4,32 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WiseWallet</title>
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="logo.png"> <!--    Icono de la pestaña     -->
+    <link rel="stylesheet" href="headerfooter.css"> <!--   Enlace con el archivo css     -->
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="headerfooter.css">
+    <!-- Icono de la flecha hacia abajo e icono usuario -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <!--Asi se comenta en el html-->
 
     <!--    CABECERA    -->
-    <div class="login">
-        <div class="header">
-            <a href="index.html" class="logo_iniciar">WiseWallet</a>
-            <div class="header-right">
-                <!-- A la pagina que esté activa le añado class = "active" -->
-                <a href="#contact">Sobre nosotros</a>
-                <button onclick="volverAtras()">Volver Atrás</button>
-            </div>
+    <a href="iniciarsesion.html" class="logo">WiseWallet</a>
+    <div class="header">
+
+        <div class="header-right" style="float: left;">
+            <!-- A la pagina que esté activa le añado class = "active" -->
+            <a href="#" onclick="volverAtras()"><i class="fa fa-arrow-circle-left"
+                    style="margin-right: 10px;"></i>Atrás</a>
         </div>
     </div>
     <!--    FIN CABECERA    -->
 
+    <!--    CONTENIDO PRINCIPAL   -->
+    <div class="content">
+        <p>
+            ''Pagina sobre nosotros :)
+        </p>
+    </div>
+    <!--    FIN CONTENIDO PRINCIPAL     -->
+
+    <!--    PIE DE PAGINA    -->
+    <div class="footer">
+
+    </div>
+    <!--    FIN PIE DE PAGINA    -->
+
+    <!--    SCRIPTS     -->
     <script>
         function volverAtras() {
             window.history.back(); // Esta función de JavaScript te lleva a la página anterior en el historial del navegador
         }
     </script>
+    <!--    FIN SCRIPTS     -->
 </body>
 
 </html>
