--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!--Asi se comenta en el html-->
-    <!--        Menu        -->
+    <!--        MENU        -->
     <div id="mysidenav" class="sidenav">
         <!--    Dropdown    -->
         <button class="dropdown-btn">Mi cuenta
@@ -49,7 +49,7 @@
         <a href="#">Noticias</a>
 
     </div>
-    <!--    Fin menu    -->
+    <!--    FIN MENU    -->
 
     <!--    CABECERA    -->
     <a href="iniciarsesion.html" class="logo">WiseWallet</a>
@@ -62,16 +62,18 @@
         </div>
 
         <div class="header-right">
-            <a href="sobrenosotros.html">Sobre nosotros</a> <!-- A la pagina que esté activa le añado class = "active" -->
-            <a href="#"><i class="fa fa-fw fa-user"></i>  Perfil</a>
+            <a href="sobrenosotros.html">Sobre nosotros</a>
+            <!-- A la pagina que esté activa le añado class = "active" -->
+            <a href="#"><i class="fa fa-fw fa-user"></i> Perfil</a>
         </div>
     </div>
     <!--    FIN CABECERA    -->
 
     <!--    CONTENIDO PRINCIPAL   -->
     <div class="content">
-        <p>
-            Pagina de inicio
+        <h1>Control de Ingresos y Gastos</h1>
+        <p>Registra ingresos y gastos, lleva un control de tus suscripciones y pagos
+            recurrentes y comprueba el balance de tus cuentas.
         </p>
     </div>
     <!--    FIN CONTENIDO PRINCIPAL     -->
