--- a/index.html
+++ b/index.html
@@ -71,11 +71,33 @@
 
     <!--    CONTENIDO PRINCIPAL   -->
     <div class="content">
-        <h1>Control de Ingresos y Gastos</h1>
+        <h1>Control de Gastos</h1>
         <p>Registra ingresos y gastos, lleva un control de tus suscripciones y pagos
             recurrentes y comprueba el balance de tus cuentas.
         </p>
     </div>
+    <img height="603" width="1072" src="fotoindex.jpg" style="margin-left: 16%;">
+
+    <div class="container">
+        <div class="contenido-dividers">
+            <h2>Listo para empezar</h2>
+            <p>El sistema viene diseñado para que puedas empezar a utilizarlo sin cambiar nada. Tú eres quien elige cómo
+                lo usas y cuándo lo modificas.</p>
+        </div>
+        <div class="divider"></div>
+        <div class="contenido-dividers">
+            <h2>Acceso de por vida</h2>
+            <p>Sin cuotas de suscripción. Paga una vez y accede al contenido (y a sus actualizaciones) para siempre.</p>
+        </div>
+        <div class="divider"></div>
+        <div class="contenido-dividers">
+            <h2>100% Funcional</h2>
+            <p>Cada plantilla viene ya programada con fórmulas y filtros configurados para que funcionen en conjunto y a
+                la perfección desde el minuto 1.</p>
+        </div>
+    </div>
+
+    <div class="content"></div>
     <!--    FIN CONTENIDO PRINCIPAL     -->
 
     <!--    PIE DE PAGINA    -->
