--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </div>
         <div class="divider"></div>
         <div class="contenido-dividers">
-            <h2>Acceso de por vida</h2>
-            <p>Sin cuotas de suscripción. Paga una vez y accede al contenido (y a sus actualizaciones) para siempre.</p>
+            <h2>Suscripción mensual</h2>
+            <p>Renueva o gestiona tus suscripciones para acceder a distintos tipos de contenido (y a sus actualizaciones).</p>
         </div>
         <div class="divider"></div>
         <div class="contenido-dividers">
@@ -97,7 +97,23 @@
         </div>
     </div>
 
-    <div class="content"></div>
+    <div class="content2">
+        <h1>Lleva un control de todos tus movimientos en un único sitio</h1>
+        <p>Esta herramienta nace de mi propia necesidad de tener controladas todas <strong>mis suscripciones y gastos
+            recurrentes</strong> y poder organizarlos por <strong>categorías</strong>, así como hacer
+            <strong>sumatorios y presupuestos mensuales</strong> con
+            ellos.
+        </p>
+        <p> Más tarde, de nuevo por necesidad, la amplié sumando también <strong>gastos del día a día</strong> y organizándolos por
+            categorías, para saber en qué tipo de cosas gastaba más dinero y cada cuánto.
+        </p>
+        <p> Obviamente tuve que añadir también un <strong>componente de Ingresos</strong>, lo que me llevó a acabar creando una vista de
+            <strong>Balance total</strong>.
+        </p>
+        <p> Todas estas necesidades, que resolví en su día para mi, fueron la semilla de lo que acabó siendo esta
+            herramienta completa, una copia exacta de la que construí para mi y que ahora pongo a tu disposición.</p>
+        </p>
+    </div>
     <!--    FIN CONTENIDO PRINCIPAL     -->
 
     <!--    PIE DE PAGINA    -->
