--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
         <a href="#">Objetivos</a>
         <a href="#">Progreso</a>
         <a href="#">Multimedia</a>
-        <a href="#">Mercado de </br> valores</a>
-        <a href="#">Noticias</a>
+        <!--    Dropdown    -->
+        <button class="dropdown-btn">Actualidad
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-container">
+            <a href="#">Noticias</a>
+            <a href="#">Mercado de <br> valores</a>
+        </div>
 
     </div>
     <!--    FIN MENU    -->
@@ -118,7 +124,7 @@
 
     <!--    PIE DE PAGINA    -->
     <div class="footer">
-
+        <a href="#">Hola</a>
     </div>
     <!--    FIN PIE DE PAGINA    -->
 
