--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
     <!--    PIE DE PAGINA    -->
     <div class="footer">
         <a href="#">Hola</a>
+        <a href="">Adios</a>
+        <a href="#">Cómo estás</a>
     </div>
     <!--    FIN PIE DE PAGINA    -->
 
