--- a/suscripciones.html
+++ b/suscripciones.html
@@ -6,12 +6,10 @@
     <title>WiseWallet</title>
     <link rel="icon" type="image/png" href="logo.png"> <!--    Icono de la pestaña     -->
     <link rel="stylesheet" href="headerfooter.css"> <!--   Enlace con el archivo css     -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="suscripciones.css">
     <!-- Icono de la flecha hacia abajo e icono usuario -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
-<!--    Codigo Alpha Vantage: RKKRW3RKQQR6UBVE  -->
 
 <body>
     <!--Asi se comenta en el html-->
@@ -74,52 +72,31 @@
     <!--    FIN CABECERA    -->
 
     <!--    CONTENIDO PRINCIPAL   -->
-    <div class="content">
-        <h1>Control de Gastos</h1>
-        <p>Registra ingresos y gastos, lleva un control de tus suscripciones y pagos
-            recurrentes y comprueba el balance de tus cuentas.
+    <h1>SUSCRIPCIONES</h1>
+    <div class="parrafo">
+        <p>¡Elige la suscripción que mejor se adapte a tus necesidades financieras! Con nuestra plataforma de
+            seguimiento de gastos, podrás mantener un control efectivo de tus egresos. Con ambas de nuestras
+            opciones ofrecemos una variedad de características diseñadas para ayudarte a administrar tu dinero de manera
+            inteligente y eficiente. Explora nuestras opciones de suscripción a continuación y comienza a tomar el
+            control de tus finanzas hoy mismo.
         </p>
     </div>
-    <img height="603" width="1072" src="fotoindex.jpg" style="margin-left: 16%;">
-
-    <div class="container">
-        <div class="contenido-dividers">
-            <h2>Listo para empezar</h2>
-            <p>El sistema viene diseñado para que puedas empezar a utilizarlo sin cambiar nada. Tú eres quien elige cómo
-                lo usas y cuándo lo modificas.</p>
+    <div class="suscripciones">
+        <div class="suscripcion">
+            <h2>Básica (2.99€/mes)</h2>
+            <p>Acceso básico a la plataforma.</p>
+            <p>Control de gastos.</p>
+            <p>Informe mensual por correo electrónico.</p>
+            <button>Suscribirse</button>
         </div>
-        <div class="divider"></div>
-        <div class="contenido-dividers">
-            <h2>Suscripción mensual</h2>
-            <p>Renueva o gestiona tus suscripciones para acceder a distintos tipos de contenido (y a sus
-                actualizaciones).</p>
+        <div class="suscripcion">
+            <h2>Premium (9.99€/mes)</h2>
+            <p>Acceso completo a la plataforma.</p>
+            <p>Control avanzado de gastos.</p>
+            <p>Informe semanal por correo electrónico.</p>
+            <p>Asistencia prioritaria al cliente.</p>
+            <button>Suscribirse</button>
         </div>
-        <div class="divider"></div>
-        <div class="contenido-dividers">
-            <h2>100% Funcional</h2>
-            <p>Cada plantilla viene ya programada con fórmulas y filtros configurados para que funcionen en conjunto y a
-                la perfección desde el minuto 1.</p>
-        </div>
-    </div>
-
-    <div class="content2">
-        <h1>Lleva un control de todos tus movimientos en un único sitio</h1>
-        <p>Esta herramienta nace de mi propia necesidad de tener controladas todas <strong>mis suscripciones y gastos
-                recurrentes</strong> y poder organizarlos por <strong>categorías</strong>, así como hacer
-            <strong>sumatorios y presupuestos mensuales</strong> con
-            ellos.
-        </p>
-        <p> Más tarde, de nuevo por necesidad, la amplié sumando también <strong>gastos del día a día</strong> y
-            organizándolos por
-            categorías, para saber en qué tipo de cosas gastaba más dinero y cada cuánto.
-        </p>
-        <p> Obviamente tuve que añadir también un <strong>componente de Ingresos</strong>, lo que me llevó a acabar
-            creando una vista de
-            <strong>Balance total</strong>.
-        </p>
-        <p> Todas estas necesidades, que resolví en su día para mi, fueron la semilla de lo que acabó siendo esta
-            herramienta completa, una copia exacta de la que construí para mi y que ahora pongo a tu disposición.</p>
-        </p>
     </div>
     <!--    FIN CONTENIDO PRINCIPAL     -->
 
